--- a/21814_PDS/Aula_02/Note2_Media_Movel.ipynb
+++ b/21814_PDS/Aula_02/Note2_Media_Movel.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filtro FIR (Media Movel - 2 vetores - amostras x coeficientes)\n",
+    "Filtro FIR Passa Baixa (Media Movel - 2 vetores - amostras x coeficientes)\n",
     "\n",
-    "amostras\n",
+    "vetor de amostras (len(k))\n",
     "\n",
     "x[n]\n",
     "x[n-1]\n",
@@ -14,7 +14,7 @@
     "x[n-3]\n",
     "\n",
     "\n",
-    "coef\n",
+    "vetor de coef (len(k))\n",
     "1\n",
     "-- => k1\n",
     "k\n",
@@ -29,7 +29,36 @@
     "\n",
     "1\n",
     "-- = k4\n",
-    "k\n"
+    "k\n",
+    "\n",
+    "\n",
+    "- Ler cada amostra x[n] e acumular no vetor\n",
+    "\n",
+    "- Calcula y[n] - 1\\k * x[n]\n",
+    "\n",
+    "- Desloca o vetor - 1a. posicao - valor atual - os outros deslocam\n",
+    "\n",
+    "- Usar na entrada um Impulso - vetor onde [n] = 1, restante = 0\n",
+    "    - y[n] =    n   = 0 - 1 = 1\\k\n",
+    "      k = 4     n-1 = 1 - 0 = 1\\k\n",
+    "                n-2 = 2 - 0 = 1\\k\n",
+    "                n-3 = 3 - 0 = 1\\k\n",
+    "                n-4 = 4 - 0 = 0\n",
+    "                ..\n",
+    "                n-5 = 5 - 0 = 0\n",
+    "\n",
+    "- Usar na entrada um degrau - vetor onde todos = 1\n",
+    "    - y[n] =    n   = 0 - 1 = 1\\k\n",
+    "      k = 4     n-1 = 1 - 1 = 2\\k\n",
+    "                n-2 = 2 - 1 = 3\\k\n",
+    "                n-3 = 3 - 1 = 4\\k\n",
+    "                n-4 = 4 - 1 = 5\\k\n",
+    "                n-5 = 5 - 1 = 6\\k\n",
+    "                ..\n",
+    "\n",
+    "- Usar na entrada um Sweep (Ocen)\n",
+    "\n",
+    "- Testar com diferentes tamanhos de media e salvar o arquivo de saida, por exemplo, k = 4, 8, 16, 32, ...\n"
    ]
   },
   {
